--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .font-bebas {
             font-family: 'Bebas Neue', sans-serif;
         }
-        
+
 
         .font-roboto {
             font-family: 'Roboto', sans-serif;
@@ -31,7 +31,8 @@
     <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="space-y-2">
             <h1 class="text-7xl font-bebas uppercase"><span class="text-[#FABE4C] ">Be the Penguins</span> <br>
-              <span class="text-[#363958]"> of Winter</span> </h1>
+                <span class="text-[#363958]"> of Winter</span>
+            </h1>
             <p class="text-[#3E3E3E] text-1rem font-normal">Lorem Ipsum is simply dummy text of the printing
                 and typesetting industry.</p>
             <button
@@ -113,6 +114,115 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <!-- man jacket -->
+    <section class="max-w-7xl mx-auto">
+        <h3 class="font-bebas text-4xl font-normal">Man Jacket</h3>
+        <div class="grid grid-cols-3 space-x-3 drop-shadow-lg font-roboto">
+            <div class="space-y-2">
+                <div class="bg-[#F1F1F1] rounded-lg p-5">
+                    <img src="images/jacket-4.png" alt="">
+                </div>
+                <h2 class="text-2xl font-bold text-[#363958]">Snowboard Jacket Mens</h2>
+                <p class="text-base font-normal text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.
+                </p>
+                <div class="flex items-center justify-between">
+                    <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
+                    <button
+                        class=" px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                            stroke="currentColor" class="w-6 h-6 inline">
+                            <path strokeLinecap="round" strokeLinejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg>
+                        BUY NOW</button>
+                </div>
+            </div>
+            <div class="space-y-2">
+                <div class="bg-[#F1F1F1] rounded p-5">
+                    <img src="images/jacket-5.png" alt="">
+                </div>
+                <h2 class="text-2xl font-bold text-[#363958]">Snowboard Jacket Mens</h2>
+                <p class="text-base font-normal text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.
+                </p>
+                <div class="flex items-center justify-between">
+                    <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
+                    <button
+                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                            stroke="currentColor" class="w-6 h-6 inline">
+                            <path strokeLinecap="round" strokeLinejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg>
+                        BUY NOW</button>
+                </div>
+            </div>
+            <div class="space-y-2">
+                <div class="bg-[#F1F1F1] rounded p-5">
+                    <img src="images/jacket-6.png" alt="">
+                </div>
+                <h2 class="text-2xl font-bold text-[#363958]">Snowboard Jacket Mens</h2>
+                <p class="text-base font-normal text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.
+                </p>
+                <div class="flex items-center justify-between">
+                    <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
+                    <button
+                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                            stroke="currentColor" class="w-6 h-6 inline">
+                            <path strokeLinecap="round" strokeLinejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                        </svg>
+                        BUY NOW</button>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <!-- parfect fit section -->
+
+    <section class="max-w-7xl mx-auto my-14">
+        <div class="flex mt-12 items-center space-x-5 ">
+            <div class="w-1/2 space-y-3">
+                <div class=" flex items-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
+                    <div class="w-20 h-24 space-x-2">
+                        <img src="icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Find the Perfect Fit</h2>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class=" flex items-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
+                    <div class="w-20 h-24 space-x-2">
+                        <img src="icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Find the Perfect Fit</h2>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class=" flex items-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
+                    <div class="w-20 h-24 space-x-2">
+                        <img src="icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Find the Perfect Fit</h2>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w-1/2">
+                <img src="images/shopping.png" alt="">
+            </div>
         </div>
     </section>
 </main>
