--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="text-[#3E3E3E] text-1rem font-normal">Lorem Ipsum is simply dummy text of the printing
                 and typesetting industry.</p>
             <button
-                class="px-3 items-center py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                class="px-3 items-center text-base py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-white font-normal mt-4"><svg
                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                     stroke="currentColor" class="w-6 h-6 inline">
                     <path strokeLinecap="round" strokeLinejoin="round"
@@ -64,7 +64,7 @@
                 <div class="flex justify-between items-center">
                     <h2 class=" text-4xl text-[#FABE4C] font-bold">$234</h2>
                     <button
-                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -84,7 +84,7 @@
                 <div class="flex justify-between items-center">
                     <h2 class="text-4xl text-[#FABE4C] font-bold">$234</h2>
                     <button
-                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -104,7 +104,7 @@
                 <div class="flex justify-between items-center">
                     <h2 class="text-4xl text-[#FABE4C] font-bold">$234</h2>
                     <button
-                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -131,7 +131,7 @@
                 <div class="flex items-center justify-between">
                     <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
                     <button
-                        class=" px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -151,7 +151,7 @@
                 <div class="flex items-center justify-between">
                     <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
                     <button
-                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -171,7 +171,7 @@
                 <div class="flex items-center justify-between">
                     <h1 class="text-4xl text-[#FABE4C] font-bold">$234</h1>
                     <button
-                        class="px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
+                        class="text-base px-3 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019]  rounded-xl text-3xl text-white font-normal mt-4"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                             stroke="currentColor" class="w-6 h-6 inline">
                             <path strokeLinecap="round" strokeLinejoin="round"
@@ -186,11 +186,11 @@
     </section>
     <!-- parfect fit section -->
 
-    <section class="max-w-7xl mx-auto my-14">
-        <div class="flex mt-12 items-center space-x-5 ">
+    <section class="max-w-7xl mx-auto my-14 font-roboto">
+        <div class="flex mt-12 items-center space-x-5">
             <div class="w-1/2 space-y-3">
                 <div class=" flex items-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
-                    <div class="w-20 h-24 space-x-2">
+                    <div class="w-14 h-20 space-x-2">
                         <img src="icons/house.png" alt="">
                     </div>
                     <div>
@@ -209,7 +209,7 @@
                             offer styles for every body.</p>
                     </div>
                 </div>
-                <div class=" flex items-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
+                <div class=" flex items-center justify-center space-x-5 rounded-2xl bg-[#FFF]  drop-shadow-lg  p-8">
                     <div class="w-20 h-24 space-x-2">
                         <img src="icons/house.png" alt="">
                     </div>
